--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
     --main-color: #111;
     --primary: #2D082A;
     --primary-light: #3e0b3f;
+    --secondary: #565181;
     --text-light: #f6f6f6;
     --font-title: 'Montserrat', sans-serif;
     --font-body: 'Manrope', sans-serif;
@@ -103,6 +104,9 @@ h1, h2, h3,
     z-index: 0;
     overflow: hidden;
 
+    width: 100%;
+    height: 750px;
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -110,7 +114,7 @@ h1, h2, h3,
     gap: 40px;
     padding: 100px 20px;
 
-    background-image: url("../res/test.webp");
+    background-image: url("../res/Studio-header.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -177,6 +181,90 @@ h1, h2, h3,
     padding: 40px;
     max-width: 800px;
     margin-top: -40px;
+}
+
+/* === NOS SERVICES === */
+.container-services {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 24px;
+    background-color: #f5f5f5; /* moins agressif que rouge */
+    padding: 40px 20px;
+}
+
+.service {
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    width: 300px;
+    text-align: center;
+    overflow: hidden;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    transition: transform 0.2s ease;
+    gap: 16px;
+}
+
+.service img {
+    aspect-ratio: 16 / 9;
+    width: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+
+/* === LE STUDIO === */
+
+.studio-button {
+    display: inline-block;
+    background-color: var(--secondary);
+    color: var(--text-light);
+    font-size: 20px;
+    font-weight: 500;
+    padding: 16px 32px;
+    border-radius: 12px;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+}
+
+.studio-container {
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: center;
+    gap: 0;
+    margin: 40px 0;
+    flex-wrap: wrap; /* utile pour le responsive */
+}
+
+.studio-text {
+    flex: 1;
+    background-color: white;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.studio-text h2 {
+    margin-top: 0;
+    font-size: 28px;
+}
+
+.studio-img {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.studio-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    aspect-ratio: 16 / 9;
+    display: block;
 }
 
 /* === Responsive tablette === */
