--- a/src/styles.css
+++ b/src/styles.css
@@ -105,13 +105,14 @@ h1, h2, h3,
     z-index: 0;
     overflow: hidden;
 
-    min-height: 100vh;
+    min-height: 100px;
+    max-height: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
     gap: 40px;
-    padding: 100px 20px;
+    padding: 250px 20px;
 
     background-image:
         linear-gradient(rgba(45, 8, 42, 0.6), rgba(45, 8, 42, 0.6)),
@@ -126,7 +127,7 @@ h1, h2, h3,
     flex-direction: column;
     align-items: center;
     gap: 30px;
-    margin-bottom: 30px;
+    padding: 100px 0px;
 }
 
 /* === Titre principal === */
@@ -183,14 +184,31 @@ h1, h2, h3,
     border-radius: 12px;
 }
 
+.title-b, .description p {
+    font-size: 18px;
+    letter-spacing: 1.1px;
+}
+
+.description p {
+    
+    font-size: 18px;
+    letter-spacing: 1.1px;
+    
+}
+
 /* === NOS SERVICES === */
+.services-title {
+    text-align: center;
+    padding: 30px;
+}
+
 .container-services {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 24px;
     background-color: #f5f5f5; 
-    padding: 40px 20px;
+    padding: 160px 20px;
 }
 
 .service {
@@ -205,10 +223,11 @@ h1, h2, h3,
     gap: 16px;
 }
 
-.service p {
-    font-size: 16px;
-    padding: 0px 20px;
 
+.service p {
+    font-size: 18px;
+    color: #828282;
+    padding: 0px 20px;
 }
 
 .service img {
@@ -272,7 +291,7 @@ h1, h2, h3,
     width: 100%;
     height: 100%;
     object-fit: cover;
-    aspect-ratio: 16 / 9;
+    aspect-ratio: 2/2;
     display: block;
 }
 
@@ -285,10 +304,12 @@ h1, h2, h3,
   color: var(--text-light);
 }
 
+
 .studio-materiel h2 {
   font-size: 48px;
   margin-bottom: 40px;
   text-align: center;
+  padding: 80px;
 }
 
 .grid {
@@ -297,6 +318,7 @@ h1, h2, h3,
   gap: 20px;
   max-width: 1100px;
   width: 100%;
+  
 }
 
 .contents h3 {
@@ -308,6 +330,17 @@ h1, h2, h3,
   padding-left: 20px;
   line-height: 1.6;
 }
+
+.studio-button-bis {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+
+.studio-button-bis .studio-button {
+     margin-top: 0px;
+}
+
 
 .footer {
   background-color: var(--primary-light);
@@ -371,6 +404,11 @@ h1, h2, h3,
 .footer-links li {
   margin-bottom: 8px;
   font-size: 0.95em;
+}
+
+.footer-contact ul li a {
+    color: var(--text-light);
+    text-decoration: none;
 }
 
 .footer-links a {
@@ -439,6 +477,10 @@ h1, h2, h3,
 @media (max-width: 768px) {
 
     /* Home page === */
+    .intro header {
+        padding: 30px 0;
+    }
+
     .intro h1 {
         font-size: 40px;
         padding: 16px 24px;
@@ -457,6 +499,10 @@ h1, h2, h3,
     .title-b,
     .description {
         padding: 20px 15px;
+    }
+
+    .title-b, .description p {
+        font-size: 20px;
     }
 
     .hamburger {
