--- a/src/styles.css
+++ b/src/styles.css
@@ -196,6 +196,141 @@ h1, h2, h3,
     
 }
 
+/* === HOME PAGE --- NOS SERVICES === */
+
+.main-container {
+  display: flex;
+  justify-content: center;    
+  background-color: #292930;
+  color: var(--text-light);
+  padding: 40px 20px;
+}
+
+.main-contain {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;    
+  width: 100%;
+  max-width: 1100px;
+}
+
+.content-wrapper {
+  display: flex;
+  flex-direction: column;     
+  align-items: center;        
+}
+
+.main-head {
+  display: flex;
+  align-items: center;       
+  gap: 30px;
+}
+
+.footer-logo {
+  width: 50px;
+  height: 50px;
+  object-fit: contain;
+  flex-shrink: 0;
+}
+
+.main-head h2 {
+  font-size: 32px;
+  margin: 0;
+}
+
+.main-desc {
+  padding: 20px;
+  font-size: 14px;
+  line-height: 1.6;
+  margin: 10px 0 0;           
+  max-width: 600px;
+  text-align: left;          
+}
+
+/* === HOME PAGE --- NOS SERVICES --- ENREGISTREMENT === */
+
+.enregistrement-container, .mixage-and-mastering-container {
+    background: linear-gradient(#36363E 0%, #2B2B33 80%, #292930 100%);
+    display: flex;
+    max-width: 640px;
+    padding: 20px;
+    border: 1px solid #424245;
+    border-radius: 20px;
+    margin-bottom: 20px;
+    justify-content: spa;
+
+}
+
+.text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.text-container-title {
+    min-width: 250px;
+    background-color: #2C2C33;
+    padding: 10px;
+    margin: auto;
+    border: 1px solid #424245;
+    border-radius: 20px;
+    font-family: manrope;
+    text-align: center;
+    font-weight: 400;
+    font-size: x-large;
+    text-transform: uppercase;
+    
+}
+
+.text-container p {
+    padding: 0px 20px;
+}
+
+.text-container a {
+    color: var(--text-light);
+    text-decoration: none;
+    background-color: #4B2C58;
+    padding: 10px 80px;
+    border: 1px solid #424245;
+    border-radius: 10px;
+}
+
+.bg-circle {
+    max-width: 80px;
+    border-radius: 50px;
+    background-color: #292930;
+    padding: 10px;
+}
+
+
+/* === HOME PAGE --- NOS SERVICES --- MIXAGE & MASTERING === */
+
+.mixage-and-mastering-container { 
+    background: transparent;
+    border: transparent;
+    gap: 30px;
+    padding: 20px;
+    max-width: 700px;
+   
+    
+}
+
+.mixage-container {
+    max-width: 300px;
+    padding: 10px;
+    border: 1px solid  #424245;
+    border-radius: 10px;
+    background: linear-gradient(#36363E 0%, #2B2B33 80%, #292930 100%);
+    
+}
+
+.text-container a:hover{
+    background-color: var(--primary-light);
+}
+
+
+
 /* === NOS SERVICES === */
 .services-title {
     text-align: center;
