--- a/src/styles.css
+++ b/src/styles.css
@@ -203,7 +203,7 @@ h1, h2, h3,
   justify-content: center;    
   background-color: #292930;
   color: var(--text-light);
-  padding: 40px 20px;
+  padding: 50px 20px;
 }
 
 .main-contain {
@@ -309,7 +309,7 @@ h1, h2, h3,
 .mixage-and-mastering-container { 
     background: transparent;
     border: transparent;
-    gap: 30px;
+    gap: 40px;
     padding: 20px;
     max-width: 700px;
    
@@ -611,7 +611,7 @@ h1, h2, h3,
 /* === Responsive mobile === */
 @media (max-width: 768px) {
 
-    /* Home page === */
+    /* === Home page === */
     .intro header {
         padding: 30px 0;
     }
@@ -669,6 +669,59 @@ h1, h2, h3,
     .header a {
         font-size: 20px;
         padding: 8px 0;
+    }
+
+    /* === Home page - Nos Services === */
+
+    .main-head {
+    flex-direction: column;
+    gap: 15px;
+    text-align: center;
+    }
+
+    .main-head h2 {
+        font-size: 26px;
+    }
+
+    .main-desc {
+        font-size: 13px;
+        text-align: center;
+    }
+
+    /* === Home page - Enregistrement */
+    .enregistrement-container,
+    .mixage-and-mastering-container {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .text-container-title {
+        font-size: 20px;
+    }
+
+    .text-container p {
+        padding: 10px;
+        font-size: 13px;
+    }
+
+    .text-container a {
+        width: 90%;
+        padding: 10px;
+        font-size: 13px;
+    }
+
+    .bg-circle {
+        max-width: 60px;
+    }
+
+    .mixage-and-mastering-container { 
+        padding: 0px;
+        gap: 20px;
+    }
+
+    .mixage-container {
+        max-width: 100%;
     }
 
 
@@ -771,3 +824,4 @@ h1, h2, h3,
     }
 
 }
+
