[ADD] Nos tarifs
C'est responsive !!

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,7 @@ body {
     padding: 0;
     background-color: var(--main-bg);
     color: var(--main-color);
+    overflow-x:hidden;
 }
 
 /* === Typography === */
@@ -372,6 +373,130 @@ h1, h2, h3,
     display: block;
 }
 
+.prix {
+    background-color: #292930;  
+    padding: 100px;
+    color: var(--text-light);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.prix-container {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    padding: 60px;
+}
+
+.prix-head {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 1px;
+    margin-bottom: 30px;
+    background-color: #36363E;
+    border: 1px solid #424245;
+    border-radius: 10px;
+    width: 90%;
+    font-size: 32px;
+    text-transform: uppercase; 
+}
+
+.prix-head img {
+    width: 60px;
+}
+
+.prix-card {
+    background: linear-gradient(#36363E 0%, #292930 100%);
+    padding: 20px;
+    margin-bottom: 20px;
+    border: 1px solid #424245;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    width: 30%;
+
+}
+
+.prix-card-head {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 10px;
+    background-color: #292930;
+    width: 95%;
+    font-size: 26px;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+
+.prix-card-head img {
+    width: 60px;
+}
+
+.prix-card-prix {
+    background-color: var(--text-light);
+    color: #292930;
+    border-radius: 70px;
+    padding: 8px 24px;
+    width: 50%;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.prix-card-prix span {
+    font-weight: 600;
+    font-size: 24px;
+}
+
+.prix-card-description {
+    padding: 10px;
+    text-align: center;
+    width: 70%;
+}
+
+.prix-card-description span {
+    display: block;
+    border: 1px solid #8c8c8c;
+}
+
+.prix-card-detail {
+    background: linear-gradient(#2B2B33 80%, #292930 100%);
+    border: 1px solid #424245;
+    border-radius: 10px;
+    padding: 10px;
+    width: 60%;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.prix-card-detail span {
+    background-color: var(--text-light);
+    color: #292930;
+    padding: 1px 10px;
+    border-radius: 50px;
+    font-weight: 600;
+    font-size: 20px;
+    margin-right: 20px;
+}
+
+.prix-card a {
+    padding: 10px 12px;
+    color: var(--text-light);
+    background-color: #4B2C58;
+    text-decoration: none;
+    text-align: center;
+    width: 40%;
+    border-radius: 5px;
+}
+
+.prix-card a:hover {
+    background-color: var(--primary-light);
+}
 
 /* === LE STUDIO === */
 
@@ -724,6 +849,50 @@ h1, h2, h3,
         max-width: 100%;
     }
 
+    /* === Nos Services === */
+    .prix-container {
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+        width: 150%;
+        margin-bottom: -80px;
+        padding: 15%;
+    }
+
+    .prix-card {
+        width: 110%;
+    }
+
+    .prix-head {
+        display: flex;
+        font-size: 24px;
+        text-align: center;
+        width: 170%;
+        /* padding: 0 20px; */
+        margin-top: -50px;
+    }
+
+    .prix-card-head {
+        flex-direction: column;
+        font-size: 20px;
+    }
+
+    .prix-card-prix {
+        width: 70%;
+    }
+
+    .prix-card-description {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .prix-card-detail {
+        width: 70%;
+    }
+
+    .prix-card a {
+        width: 80%;
+    }
 
     /* === Studio === */
     .studio-container {
