--- a/src/styles.css
+++ b/src/styles.css
@@ -458,6 +458,7 @@ h1, h2, h3,
     padding: 10px;
     text-align: center;
     width: 70%;
+    margin-bottom: auto;
 }
 
 .prix-card-description span {
